--- a/public/css/app.css
+++ b/public/css/app.css
@@ -10660,3 +10660,29 @@ a.text-dark:focus {
   box-shadow: 0 2px 4px rgba(0, 0, 0, 0.04);
 }
 
+body {
+  background-color: white;
+}
+
+.login-form {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  -webkit-transform: translate(-50%, -50%);
+          transform: translate(-50%, -50%);
+}
+
+.login-logo {
+  width: 100%;
+  height: 150px;
+  background-image: url("/img/logo_bg.png");
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: contain;
+}
+
+.login-btn {
+  width: 100%;
+  background-color: red;
+}
+
