--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -12,3 +12,28 @@
   background-color: #fff;
   box-shadow: 0 2px 4px rgba(0, 0, 0, 0.04);
 }
+
+body {
+    background-color: white;
+}
+
+.login-form {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+}
+
+.login-logo {
+    width: 100%;
+    height: 150px;
+    background-image: url('/img/logo_bg.png');
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: contain;
+}
+
+.login-btn {
+    width: 100%;
+    background-color: red;
+}
