--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -126,7 +126,7 @@ body {
 }
 
 .login-form input {
-    padding: 0.4rem 1rem;
+    padding: 1.3rem 1.5rem;
 }
 
 .login-logo {
@@ -136,5 +136,7 @@ body {
 }
 
 .login-greeting {
+    padding: 5px;
+    margin-bottom: 10px;
     text-align: center;
 }
