--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -32,7 +32,7 @@ body {
 }
 
 .msg-box {
-    padding: 5px;
+    padding: 3px;
     display: inline-block;
     width: 100%;
 }
@@ -91,6 +91,7 @@ body {
 #micro {
     background-color: rgba(150, 140, 255, 0.7);
     border: none;
+    outline: none;
     border-radius: 50%;
     padding: 10px;
 }
@@ -101,7 +102,7 @@ body {
     height: 63px;
     width: 100%;
     background-color: transparent;
-    padding: 10px;
+    padding: 10px 20%;
     z-index: -1;
 }
 
@@ -139,4 +140,44 @@ body {
     padding: 5px;
     margin-bottom: 10px;
     text-align: center;
+}
+
+.schedule {
+    max-width: 100%;
+    margin-top: 10px;
+    display: inline-flex;
+    overflow-x: auto;
+    white-space: nowrap;
+}
+
+.schedule-day {
+    display: block;
+    width:90vw;
+    white-space: normal;
+}
+
+.schedule-box {
+    width: 75vw;
+    padding: 5px 10px;
+    margin: 0px 5px 10px 5px;
+    border: 1px solid lightgrey;
+    border-left: 8px solid lightgrey;
+    border-radius: 7px;
+    color: grey;
+}
+
+.schedule-course {
+    color: black;
+}
+
+.course-name {
+    margin-right: 10px;
+}
+
+.current-lesson {
+    border-left: 8px solid green;    
+}
+
+.next-lesson {
+    border-left: 8px solid orange;
 }
