--- a/public/css/app.css
+++ b/public/css/app.css
@@ -10704,7 +10704,7 @@ body {
   width: 100%;
   padding-bottom: 10px;
   background-color: white;
-  box-shadow: 0px 0px 100px 20px white;
+  box-shadow: 0px 0px 80px 50px white;
   z-index: 2;
 }
 
@@ -10718,6 +10718,11 @@ body {
   border: 1px solid #d8c2ff;
   font-weight: lighter;
   padding: 8px 16px;
+  cursor: pointer;
+}
+
+.command:hover {
+  box-shadow: 0px 0px 5px 1px #d8c2ff;
 }
 
 .command:not(:first-child) {
