--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -60,9 +60,9 @@ body {
     width: 100%;
     padding-bottom: 10px;
     background-color: white;
-    -webkit-box-shadow: 0px 0px 100px 20px rgba(255,255,255,1);
-    -moz-box-shadow: 0px 0px 100px 20px rgba(255,255,255,1);
-    box-shadow: 0px 0px 100px 20px rgba(255,255,255,1);
+    -webkit-box-shadow: 0px 0px 80px 50px rgba(255,255,255,1);
+    -moz-box-shadow: 0px 0px 80px 50px rgba(255,255,255,1);
+    box-shadow: 0px 0px 80px 50px rgba(255,255,255,1);
     z-index: 2;
 }
 
@@ -76,7 +76,13 @@ body {
     border: 1px solid #d8c2ff;
     font-weight: lighter;
     padding: 8px 16px;
+    cursor: pointer;
 }
+
+.command:hover {
+    box-shadow: 0px 0px 5px 1px #d8c2ff;
+}
+
 .command:not(:first-child) {
     margin-left: 5px;
 }
