--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -71,14 +71,27 @@ body {
 .commands {
     overflow-x: auto;
     white-space: nowrap;
-    padding: 20px 0;
+    padding-bottom: 10px;
+    padding-top: 5px;
+    -ms-overflow-style: none;  // IE 10+
+    overflow: -moz-scrollbars-none;  // Firefox
 }
+
+
+.commands::-webkit-scrollbar {
+    display: none;  // Safari and Chrome
+}
+
 
 .command {
     border: 1px solid #d8c2ff;
     font-weight: lighter;
     padding: 8px 16px;
     cursor: pointer;
+}
+
+.command:last-of-type {
+    margin-right: 5px;
 }
 
 .command:hover {
@@ -159,7 +172,14 @@ body {
     display: inline-flex;
     overflow-x: auto;
     white-space: nowrap;
+    -ms-overflow-style: none;  // IE 10+
+    overflow: -moz-scrollbars-none;  // Firefox
 }
+
+.schedule::-webkit-scrollbar {
+    display: none;  // Safari and Chrome
+}
+
 
 .schedule-day {
     display: block;
@@ -313,7 +333,7 @@ body {
 }
 
 .n-brand {
-    text-align: center;
+    padding: 20px 15px;
 }
 
 .n-brand img {
@@ -332,7 +352,7 @@ body {
 }
 
 .n-link {
-    padding: 5px 20px;
+    padding: 5px 10px;
 }
 
 .n-link a {
@@ -385,4 +405,12 @@ body {
 
 .m-scroll-nav span:first-child {
     margin-left: 0px!important;
+}
+
+.n-link img {
+    margin: auto 5px;
+}
+
+.n-link span {
+    display: contents;
 }
