--- a/public/css/app.css
+++ b/public/css/app.css
@@ -10802,9 +10802,11 @@ body {
 }
 
 .login-logo {
-  width: 100%;
+  display: block;
+  width: 250px;
   height: auto;
-  margin-bottom: 50px;
+  margin: auto;
+  margin-bottom: 20px;
 }
 
 .login-greeting {
@@ -10894,6 +10896,7 @@ body {
 }
 
 .w-text-login-box {
+  z-index: 2;
   padding-top: 35px;
 }
 
