--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -159,9 +159,11 @@ body {
 }
 
 .login-logo {
-    width: 100%;
+    display: block;
+    width: 250px;
     height: auto;
-    margin-bottom: 50px;
+    margin: auto;
+    margin-bottom: 20px;
 }
 
 .login-greeting {
@@ -248,6 +250,7 @@ body {
 }
 
 .w-text-login-box {
+    z-index: 2;
     padding-top: 35px;
 }
 
