--- a/public/css/app.css
+++ b/public/css/app.css
@@ -11187,6 +11187,34 @@ h6 {
 .change-link {
   -webkit-transform: translateY(-100%);
           transform: translateY(-100%);
+  background-color: rgba(0, 0, 0, 0.3);
+  box-shadow: 0 0 20px 6px rgba(0, 0, 0, 0.3);
   text-align: center;
+}
+
+.d-day:not(:first-of-type) h6 {
+  padding-top: 20px;
+}
+
+.n-u-img {
+  width: 100%;
+  border-radius: 5px;
+}
+
+.n-svg img {
+  width: 15px;
+  -webkit-filter: invert(100%);
+          filter: invert(100%);
+}
+
+.change-link a {
+  color: white;
+}
+
+.a-course {
+  padding: 5px 10px;
+  margin: 5px 0;
+  border: 1px solid lightgrey;
+  border-radius: 5px;
 }
 
