--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -537,5 +537,31 @@ span.menu {
 }
 .change-link {
     transform: translateY(-100%);
+    background-color: rgba(0, 0, 0, 0.3);
+    box-shadow: 0 0 20px 6px rgba(0, 0, 0, 0.3);
     text-align: center;
+}
+
+.d-day:not(:first-of-type) h6{
+    padding-top: 20px;
+}
+.n-u-img {
+    width:100%;
+    border-radius: 5px;
+}
+
+.n-svg img {
+    width:15px;
+    filter: invert(100%);
+}
+
+.change-link a {
+    color: white;
+}
+
+.a-course {
+    padding: 5px 10px;
+    margin: 5px 0;
+    border: 1px solid lightgrey;
+    border-radius: 5px;
 }
