--- a/public/css/app.css
+++ b/public/css/app.css
@@ -11218,3 +11218,12 @@ h6 {
   border-radius: 5px;
 }
 
+.a-active {
+  box-shadow: 0 0 20px 1px rgba(0, 0, 0, 0.5);
+}
+
+#video {
+  width: 100%;
+  padding: 0 50px;
+}
+
