--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -542,6 +542,10 @@ span.menu {
     text-align: center;
 }
 
+.d-day {
+    padding: 10px;
+}
+
 .d-day:not(:first-of-type) h6{
     padding-top: 20px;
 }
